@@ -11,9 +11,7 @@
 # 
 ##############################################################################
 
-import re, ST, STDOM
-from string import split, join, replace, expandtabs, strip, find
-
+import re
 from DocumentClass import *
 
 class StructuredTextImage(StructuredTextMarkup):
@@ -32,8 +30,8 @@ class DocumentWithImages(DocumentClass):
 
     def doc_img(
         self, s,
-        expr1=re.compile('\"([ _a-zA-Z0-9*.:/;,\-\n\~]+)\":img:([a-zA-Z0-9\-.:/;,\n\~]+)').search,
-        expr2=re.compile('\"([ _a-zA-Z0-9*.:/;,\-\n\~]+)\":img:([a-zA-Z0-9\-.:/;,\n\~]+):([a-zA-Z0-9\-.:/;,\n\~]+)').search
+        expr1=re.compile('\"([ _a-zA-Z0-9*.:/;,\-\n\~]+)\":img:([a-zA-Z0-9\_\-.:/;,\n\~]+)').search,
+        expr2=re.compile('\"([ _a-zA-Z0-9*.:/;,\-\n\~]+)\":img:([a-zA-Z0-9\_\-.:/;,\n\~]+):([a-zA-Z0-9\-.:/;,\n\~]+)').search
         ):
 
         r = expr2(s)
